Added support for typed collections validations